# h264decpp-wasm

./: .gitmodules  CMakeLists.txt  README.md  build.sh
cmake/: build_type.cmake  emscripten_flags.cmake
demo/: demo.html  demo.mjs  player.mjs
h264decppjs/: decoder.mjs  index.mjs
h264decppjs/internal/: buffer.mjs  module.mjs
src/: decoder.cpp
